--- a/packages/pyxis-scss/src/scss/components/forms/dropdown.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/dropdown.scss
@@ -4,11 +4,8 @@
 @use "mixins";
 
 $_wrapperAnimationOffset: lib.rem(10px);
-$_transitionProperty: cubic-bezier(0.3, 0.07, 0.34, 1);
 
 .form-field__dropdown-wrapper {
-  $transition: 0.1s $_transitionProperty;
-
   @include foundations.elevation(s, action15);
   @include foundations.radius(xs);
   border: variables.$borderWidth solid foundations.color(actionBase);
@@ -19,9 +16,9 @@ $_transitionProperty: cubic-bezier(0.3, 0.07, 0.34, 1);
   position: absolute;
   right: -#{variables.$borderWidth};
   top: -#{variables.$borderWidth};
-  transition: opacity $transition,
-    outline-color $transition,
-    padding-top $transition;
+  transition-duration: foundations.duration(fastest);
+  transition-property: opacity, outline-color, padding-top, visibility;
+  transition-timing-function: foundations.timing(exit);
   visibility: hidden;
   will-change: opacity, outline-color, padding-top;
   z-index: 1;
@@ -34,6 +31,7 @@ $_transitionProperty: cubic-bezier(0.3, 0.07, 0.34, 1);
     opacity: 1;
     outline-color: rgba(foundations.color(actionBase), 0.2);
     padding-top: variables.$fieldHeight;
+    transition-timing-function: foundations.timing(entrance);
     visibility: visible;
 
     @include lib.onSafari {
@@ -85,7 +83,6 @@ $_transitionProperty: cubic-bezier(0.3, 0.07, 0.34, 1);
 .form-field__dropdown__item {
   $height: lib.rem(40px);
   $heightSmall: lib.rem(30px);
-  $transition: 0.05s $_transitionProperty;
 
   @include foundations.horizontalPadding(2xs);
   @include foundations.radius(2xs);
@@ -94,7 +91,9 @@ $_transitionProperty: cubic-bezier(0.3, 0.07, 0.34, 1);
   cursor: pointer;
   display: grid;
   height: $height;
-  transition: background-color $transition, color $transition;
+  transition-duration: foundations.duration(fast);
+  transition-property: background-color, color;
+  transition-timing-function: foundations.timing(base);
   user-select: none;
   will-change: background-color, color;
 
