--- a/packages/pyxis-react/src/stories/components/Badge/Badge.module.scss
+++ b/packages/pyxis-react/src/stories/components/Badge/Badge.module.scss
@@ -1,10 +1,10 @@
 @use "src/stories/pyxis";
 
-.badge-wrapper {
+.wrapper {
   @include pyxis.padding(s);
   @include pyxis.columnGap(s);
   display: grid;
   grid-auto-flow: column;
-  grid-auto-columns: min-content;
+  grid-auto-columns: max-content;
   width: min-content;
 }
