[PRIMA-12315]: [Pyxis Storybook] Documentation for Message component (#62)

--- a/packages/pyxis-react/src/stories/components/Message/Message.module.scss
+++ b/packages/pyxis-react/src/stories/components/Message/Message.module.scss
@@ -1,6 +1,6 @@
 @use "src/stories/pyxis.scss";
 
-.message-wrapper {
+.wrapper {
   @include pyxis.columnGap(m);
   @include pyxis.rowGap(m);
   margin-bottom: 2rem;
