--- a/packages/pyxis-scss/src/scss/components/forms/card.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/card.scss
@@ -234,16 +234,25 @@
 }
 
 .form-card-group {
-  @include foundations.columnGap(l);
+  @include foundations.columnGap(xs);
+  @include foundations.rowGap(xs);
   display: grid;
   grid-auto-columns: 1fr;
-  grid-auto-flow: column;
+  grid-auto-flow: row;
+  justify-content: center;
   position: relative;
+
+  @include foundations.mq(xsmall) {
+    grid-auto-flow: column;
+  }
 }
 
 .form-card-group--column {
-  @include foundations.rowGap(xs);
   grid-auto-flow: row;
+}
+
+.form-card-group--row {
+  grid-auto-flow: column;
 }
 
 .form-card-group__error-message {
