[DS-40]: [Pyxis] Add states in icon component (#77)

--- a/packages/pyxis-scss/src/scss/components/icons.scss
+++ b/packages/pyxis-scss/src/scss/components/icons.scss
@@ -7,6 +7,20 @@ $_size: (
   l: 24px
 );
 
+$_variants: (brand, alert, success, error);
+
+/// Add background-color and color to icon.
+/// @param {Color} $background - Background color name
+/// @param {Color} $icon - Color name
+///
+/// @output Appropriate `background-color` and `color`.
+///
+/// @access private
+@mixin _setColors($background, $icon) {
+  background-color: foundations.color($background);
+  color: foundations.color($icon);
+}
+
 .icon {
   display: block;
 }
@@ -21,13 +35,19 @@ $_size: (
 .icon--boxed {
   @include foundations.padding(xs);
   @include foundations.radius(m);
-  background-color: foundations.color(brandLight);
+  @include _setColors(neutral95, neutral25);
   box-sizing: content-box;
-  color: foundations.color(brandBase);
   display: flex;
   place-items: center;
 
+  @each $variant in $_variants {
+    &.icon--#{$variant} {
+      @include _setColors(#{$variant}Light, if($variant == "alert", neutral25, #{$variant}Base));
+    }
+  }
+
   &.icon--alt {
-    background-color: foundations.color(neutralLight);
+    @include _setColors(neutralLight, brandBase);
   }
 }
+
