[DS-44]: [Pyxis Elm] Implement the Loader component (#92)

--- a/packages/pyxis-scss/src/scss/components/index.scss
+++ b/packages/pyxis-scss/src/scss/components/index.scss
@@ -1,6 +1,7 @@
 @forward "badge";
 @forward "buttonGroup";
 @forward "buttons";
-@forward "icons";
 @forward "forms";
+@forward "icons";
+@forward "loaders";
 @forward "message";
