[DS-42]: [Pyxis Elm] Implement the FormGrid (#88)

--- a/packages/pyxis-scss/src/scss/components/forms/grid.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/grid.scss
@@ -7,6 +7,7 @@
 @use "../../lib";
 
 $_maxColumnSpan: 5;
+$_minColumnWidth: lib.rem(65px);
 $_smallRowWidth: lib.rem(360px);
 $_largeRowWidth: lib.rem(720px);
 
@@ -31,24 +32,37 @@ $_largeRowWidth: lib.rem(720px);
 
   @include foundations.mq(xsmall) {
     grid-auto-flow: column;
+    grid-template-columns: repeat(auto-fit, minmax($_minColumnWidth, 1fr));
   }
 }
 
 .form-grid__row--large {
-  max-width: $_largeRowWidth;
+  @include foundations.mq(xsmall) {
+    max-width: $_largeRowWidth;
+  }
+
+  @include foundations.mq(small) {
+    grid-template-columns: unset;
+  }
 }
 
 .form-grid__row--small {
-  max-width: $_smallRowWidth;
+  @include foundations.mq(xsmall) {
+    max-width: $_smallRowWidth;
+  }
+
+  @include foundations.mq(small) {
+    grid-template-columns: unset;
+  }
 }
 
 .form-grid__row__column {
   grid-column: auto;
 }
 
-@include foundations.mq(xsmall) {
-  @for $i from 2 through $_maxColumnSpan {
-    .form-grid__row__column--span-#{$i} {
+@for $i from 2 through $_maxColumnSpan {
+  .form-grid__row__column--span-#{$i} {
+    @include foundations.mq(xsmall) {
       grid-column: auto / span $i;
     }
   }
