[DS-65]: [Pyxis Elm] Live test Form (#101)

--- a/packages/pyxis-scss/src/scss/components/buttonRow.scss
+++ b/packages/pyxis-scss/src/scss/components/buttonRow.scss
@@ -1,7 +1,7 @@
 @use "../lib";
 @use "../foundations";
 
-.button-group {
+.button-row {
   align-items: center;
   display: grid;
   gap: foundations.spacing(s);
