[DS-30]: [Pyxis SCSS] Toggle component (#113)

--- a/packages/pyxis-scss/src/scss/components/forms/mixins.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/mixins.scss
@@ -7,6 +7,7 @@
 /// @access private
 @mixin fieldStateDefault {
   outline: transparent solid variables.$outlineWidth;
+  outline-offset: 0;
   transition-duration: foundations.duration(fast);
   transition-property: border-color, outline-color;
   transition-timing-function: foundations.timing(base);
