--- a/packages/pyxis-scss/src/scss/components/forms/fields/select.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/fields/select.scss
@@ -1,5 +1,5 @@
 ////
-/// Generated classes for text field styling.
+/// Generated classes for select field styling.
 /// @group COMPONENTS
 ////
 
@@ -25,7 +25,7 @@
 ///    </div>
 ///
 /// @example scss - Select field with custom dropdown
-///    <div class="form-field form-field--with-dropdown">
+///    <div class="form-field form-field--with-select-dropdown">
 ///      <label class="form-field__wrapper">
 ///        <select class="form-field__select">
 ///          <option hidden disabled selected>Placeholder</option>
@@ -37,9 +37,9 @@
 ///          <svg width="24" height="24"></svg>
 ///        </div>
 ///      </label>
-///      <div class="form-field__dropdown-wrapper">
-///        <div class="form-field__dropdown">
-///          <div class="form-field__dropdown__item">Option 1</div>
+///      <div class="form-dropdown-wrapper">
+///        <div class="form-dropdown">
+///          <div class="form-dropdown__item">Option 1</div>
 ///          ...
 ///        </div>
 ///      </div>
@@ -61,7 +61,7 @@
     text-indent: lib.rem(-2px);
   }
 
-  .form-field--with-dropdown & {
+  .form-field--with-select-dropdown & {
     pointer-events: none;
   }
 }
