[DS-84]: [Pyxis Scss] Update Legend component (#121)

--- a/packages/pyxis-scss/src/scss/components/forms/legend.scss
+++ b/packages/pyxis-scss/src/scss/components/forms/legend.scss
@@ -43,7 +43,7 @@
 }
 
 .form-legend__title {
-  @include foundations.title(s, bold);
+  @include foundations.title(m, bold);
   color: foundations.color(neutralBase);
   display: block;
 }
